...
            LazyVGrid(columns: columns, spacing: 20) {
                moviesList
                loadingIndicator
            }
            .padding()
        }
        .accessibilityIdentifier("HomeMoviesGrid")
        .refreshable {
            await viewModel.refresh()
        }
    }

    private var moviesList: some View {
        ForEach(viewModel.movies) { movie in
            NavigationLink(value: movie) {
                MovieCardView(movie: movie)
            }
            .buttonStyle(.plain)
            .accessibilityIdentifier("MovieCard")
            .onAppear {
                Task {
                    await viewModel.loadMoreIfNeeded(currentItem: movie)
                }
            }
        }
...
